# cargo-patch-source

./: Cargo.toml  README.md  REVIEW.md  pixi.toml
.github/workflows/: ci.yml  release.yml
src/: cargo_ops.rs  cli.rs  error.rs  lib.rs  main.rs  patch.rs  source.rs  toml_ops.rs
tests/: .integration_test.rs.pending-snap  integration_test.rs
tests/support/: mod.rs
