[package]
name = "cargo-patch-source"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "cargo-patch-source"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml_edit = "0.22"
cargo_metadata = "0.18"
miette = { version = "7.0", features = ["fancy"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
insta = { version = "1.40", features = ["toml"] }
